--- a/css/show.css
+++ b/css/show.css
@@ -25,7 +25,7 @@ td:hover {
   justify-content: space-between;
   padding: 0px 40px;
 }
-.btn {
+.btncreate {
   background-color: black;
   color: white;
   height: 60px;
@@ -35,7 +35,7 @@ td:hover {
   width: 200px;
   transition: 0.4s ease-in-out all;
 }
-.btn:hover {
+.btncreate:hover {
   background-color: black;
   color: white;
   height: 60px;
@@ -44,4 +44,8 @@ td:hover {
   justify-content: center;
   width: 200px;
   transform: scale(1.1);
+}
+.btnactions{
+    width: 85px;
+    margin: 2px;
 }
